src/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
:root {
  font-family: "Roboto", sans-serif;
  line-height: 1.5;
  font-weight: 400;
  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  ---green: #538d4e;
  ---yellow: #b59f3b;
  ---gray: #3a3a3c;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
  background: #121213;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 700;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}

.container {
    display: flex;
    gap: 5px;
    margin: 0 auto 5px auto;
    width: fit-content;
}

.container2 {
    width: 95%;
    max-width: 500px;
    margin: auto;
    display: flex;
    gap: 6px;
    margin-bottom: 8px;
    cursor: pointer;
}

.container3 {
    width: 90%;
    max-width: 456px;
    margin: auto;
    display: flex;
    gap: 6px;
    margin-bottom: 8px;
    cursor: pointer;
}

.box {
    width: 52px;
    height: 52px;
    border: 2px solid #3a3a3c;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 900;
    font-size: 30px;
    color: white;
}

.box.flip1 {
  animation: flip1 0.8s ease forwards;
}

.box.flip2 {
  animation: flip2 0.8s ease forwards;
}

.box.flip3 {
  animation: flip3 0.8s ease forwards;
}

.modal {
  background-color: white;
  font-weight: 700;
  display: flex;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  align-items: center;
  justify-content: center;
  top: 45px;
  width: 135px;
  height: 16px;
  position: absolute;
  margin: auto;
  padding: 13px;
  font-size: 14px;
  color: black;
  border-radius: 6px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
  z-index: 1000;
}

.fade-in {
  opacity: 1;
}

.fade-out {
  opacity: 0;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 999;
  display: none;
}

.overlay.visible {
  display: block;
}

.result {
  position: absolute;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 395px;  
  height: 535px;
  opacity: 0;
  transform: translateY(20px);
  transition: opacity 0.5s, transform 0.5s;
  background-color: #121214;
  z-index: 1000;
  padding: 25px;
  border-radius: 10px;
  box-sizing: border-box;
  max-width: 100%;
}

.exit {
  width: 100%;
  display: flex;
  justify-content: end;
}

.fa-xmark {
  cursor: pointer;
  color: white;
  font-size: 20px;
}

.result.visible {
  opacity: 1;
  transform: translate(-50%, -50%) translateY(0); 
}

.result.hidden {
  opacity: 0;
  transform: translate(-50%, -50%) translateY(20px);
}

.title {
  font-family: "Roboto", sans-serif;
  font-size: 40px;
  color: white;
}

.chart-container {
  width: 100%;
  max-width: 600px;
  margin: 20px auto;
}

.chart-row {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}

.chart-label {
  width: 30px;
  text-align: right;
  margin-right: 10px;
  font-size: 14px;
  color: white;
  font-weight: bold;
}

.chart-bar {
  position: relative;
  height: 30px;
  border-radius: 2px;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  color: white;
  font-weight: bold;
  padding-right: 10px;
}

.chart-value {
  position: relative;
}

.shake {
  animation: shake 0.3s ease-in-out;
}

.active {
  border: 2px solid #818384;
}

.button {
    width: 10%;
    color: white;
    border-radius: 4px;
    font-size: 1.25em;
    font-weight: 700;
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
    padding: 0;
    height: 58px;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

@keyframes shake {
  0%, 100% {
    transform: translateX(0);
  }
  20% {
    transform: translateX(-5px);
  }
  40% {
    transform: translateX(5px);
  }
  60% {
    transform: translateX(-5px);
  }
  80% {
    transform: translateX(5px);
  }
}

@keyframes flip1 {
  0% {
    transform: rotateX(0);
    background: initial;
    border-color: #818384;
  }
  49.9% {
    transform: rotateX(89.9deg);
    background: initial;
    border-color: #818384;
  }
  50% {
    transform: rotateX(90deg);
    background: var(---gray);
    border-color: var(---gray);
  }
  100% {
    transform: rotateX(0);
    background: var(---gray);
    border-color: var(---gray);
  }
}

@keyframes flip2 {
  0% {
    transform: rotateX(0);
    background: initial;
    border-color: #818384;
  }
  49.9% {
    transform: rotateX(89.9deg);
    background: initial;
    border-color: #818384;
  }
  50% {
    transform: rotateX(90deg);
    background: var(---yellow);
    border-color: var(---yellow);
  }
  100% {
    transform: rotateX(0);
    background: var(---yellow);
    border-color: var(---yellow);
  }
}

@keyframes flip3 {
  0% {
    transform: rotateX(0);
    background: initial;
    border-color: #818384;
  }
  49.9% {
    transform: rotateX(89.9deg);
    background: initial;
    border-color: #818384;
  }
  50% {
    transform: rotateX(90deg);
    background: var(---green);
    border-color: var(---green);
  }
  100% {
    transform: rotateX(0);
    background: var(---green);
    border-color: var(---green);
  }
}

@media screen and (max-width: 565px) {

}

